--- a/index.html
+++ b/index.html
@@ -1,17 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Humming Bird</title>
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <link rel="stylesheet" href="/css/main.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
 </head>
+
 <body>
+    <div class="container">
+        <nav class="navbar">
+            <ul>
+                <a href="#">Home</a>
+                <a href="#">Gallery</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+
+            </ul>
+            <div class="actions">
+                <button class="action-button email">
+                    <i class="fas fa-envelope"></i> Email
+                </button>
+                <button class="action-button login">
+
+
+                </button>
+            </div>
+        </nav>
+
+    </div>
 
 
 
 
-    
 </body>
+
 </html>
