humming bird project upd

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Humming Bird</title>
-    <link rel="stylesheet" href="/css/main.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 </head>
 
 <body>
@@ -23,14 +23,22 @@
                 <button class="action-button email">
                     <i class="fas fa-envelope"></i> Email
                 </button>
-                <button class="action-button login">
-
-
-                </button>
+                <button class="action-button login">Login</button>
             </div>
         </nav>
-
+        <main class="content">
+            <h1 class="title">Gravity bird</h1>
+            <p class="sub-title">soothing nature|deep hues|organic motion</p>
+            <div>
+                <button class="btn primary">Learn More</button>
+                <button class="btn secondary">Contact</button>
+            </div>
+            <form class="subscribe-form"></form>
+            <input type="email" placeholder="Enter your email" required />
+            <button type="submit">Subscribe</button>
+        </main>
     </div>
+
 
 
 
