humming bird up

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <main class="content">
             <h1 class="title">Gravity bird</h1>
             <p class="sub-title">soothing nature|deep hues|organic motion</p>
-            <div>
-                <button class="btn primary">Learn More</button>
-                <button class="btn secondary">Contact</button>
+            <div class="cta-btns">
+                <button class="btn-primary">Learn More</button>
+                <button class="btn-secondary">Contact</button>
             </div>
             <form class="subscribe-form"></form>
             <input type="email" placeholder="Enter your email" required />
