--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <h1 class="title">Gravity bird</h1>
             <p class="sub-title">soothing nature|deep hues|organic motion</p>
             <div class="cta-btns">
-                <button class="btn-primary">Learn More</button>
-                <button class="btn-secondary">Contact</button>
+                <button class="btn primary">Learn More</button>
+                <button class="btn secondary">Contact</button>
             </div>
             <form class="subscribe-form"></form>
             <input type="email" placeholder="Enter your email" required />
