finised project humming bird

--- a/index.html
+++ b/index.html
@@ -28,14 +28,15 @@
         </nav>
         <main class="content">
             <h1 class="title">Gravity bird</h1>
-            <p class="sub-title">soothing nature|deep hues|organic motion</p>
+            <p class="sub-title">soothing nature | deep hues | organic motion</p>
             <div class="cta-btns">
                 <button class="btn primary">Learn More</button>
                 <button class="btn secondary">Contact</button>
             </div>
-            <form class="subscribe-form"></form>
-            <input type="email" placeholder="Enter your email" required />
-            <button type="submit">Subscribe</button>
+            <form class="subscribe-form">
+                <input type="email" placeholder="Enter your email" required />
+                <button type="submit">Subscribe</button>
+            </form>
         </main>
     </div>
 
